# gtkforeign

./: .gitignore  Makefile.am  configure.ac
examples/: gtkforeign-exporter.c  gtkforeign-importer.c
protocol/: xdg-foreign.xml
src/: gtkforeign-exported-wayland.c  gtkforeign-exported-wayland.h  gtkforeign-exported.c  gtkforeign-exported.h  gtkforeign-impl-wayland.c  gtkforeign-impl-wayland.h  gtkforeign-impl.c  gtkforeign-impl.h  gtkforeign-imported-wayland.c  gtkforeign-imported-wayland.h  gtkforeign-imported.c  gtkforeign-imported.h  gtkforeign-private.h  gtkforeign.c  gtkforeign.h
